Use winston logger
